tree-sitter-dform/test/corpus/repo/crates__dform-mock__schemas__fake.txt
=================================
crates/dform-mock/schemas/fake.df
=================================

# The fake provider behind dform.df, dform-advanced.df and the examples.
#
#   type_attr(Type, Path, Ty, Flags).   Flags: required computed id sensitive
#                                       nullable optional_computed force_new
#   type_provider(Type, Provider).
#   type_mint(Type, Path, Template).    how the mock mints a computed value at
#                                       Apply: {type} {name} {attr} {hash}
#   type_replace(Type, Order).          create_first, destroy_first or either
#
# Every type has a fresh `id`; db.postgres and k8s.cluster have open
# endpoints. Attributes a program sets are not listed (the fake provider
# accepts any configured attribute) unless a change to one replaces the
# object: a vpc's or a subnet's cidr is force_new.

type_provider(net.vpc, "fakecloud")
type_provider(net.subnet, "fakecloud")
type_provider(net.vpc_peering, "fakecloud")
type_provider(net.route_table, "fakecloud")
type_provider(compute.vm, "fakecloud")
type_provider("db.postgres", "fakecloud")
type_provider(k8s.cluster, "fakecloud")
type_provider(k8s.nodepool, "fakecloud")
type_provider("iam.role", "fakecloud")
type_provider("iam.policy", "fakecloud")

type_attr(net.vpc, "id", "string", ["computed", "id"])
type_attr(net.subnet, "id", "string", ["computed", "id"])
type_attr(net.vpc_peering, "id", "string", ["computed", "id"])
type_attr(net.route_table, "id", "string", ["computed", "id"])
type_attr(compute.vm, "id", "string", ["computed", "id"])
type_attr("db.postgres", "id", "string", ["computed", "id"])
type_attr(k8s.cluster, "id", "string", ["computed", "id"])
type_attr(k8s.nodepool, "id", "string", ["computed", "id"])
type_attr("iam.role", "id", "string", ["computed", "id"])
type_attr("iam.policy", "id", "string", ["computed", "id"])

type_attr(net.vpc, "cidr", "string", ["force_new"])
type_attr(net.subnet, "cidr", "string", ["force_new"])

# A decimal (R-75): a vm's `weight` is a number, an int or a float, sent
# as a JSON number. Its `labels` are a map: any keys, each value a string.
type_attr(compute.vm, "weight", "number", [])
type_attr(compute.vm, "labels", "map(string)", [])

# What an attribute that points at another resource takes: the resource
# itself (`vpc = main`), resolved to its id at Apply (R-43). Each is named
# for the thing it points at.
type_attr(net.subnet, "vpc", "ref(net.vpc)", [])
type_attr(net.vpc_peering, "requester_vpc", "ref(net.vpc)", [])
type_attr(net.vpc_peering, "accepter_vpc", "ref(net.vpc)", [])
type_attr("db.postgres", "subnets", "list(ref(net.subnet))", [])
type_attr(k8s.cluster, "subnets", "list(ref(net.subnet))", [])
type_attr(k8s.nodepool, "cluster", "ref(k8s.cluster)", [])
type_attr(net.route_table, "vpc", "ref(net.vpc)", [])

# A relationship whose state lives on one side is an attribute of that
# side, not a resource (R-158): a role's policies, a route table's
# routes. Each is a set: every contribution adds its elements, so several
# modules each add one to the same role.
type_attr("iam.role", "policies", "set(ref(iam.policy))", [])
type_attr(net.route_table, "routes", "set", [])
type_attr(net.route_table, "routes.destination", "inet", ["required"])
type_attr(net.route_table, "routes.target", "ref(net.vpc)", ["required"])

# The types those attributes replace: writing one is an error that names
# the attribute (`type_instead(Gone, Type, Path)`).
type_instead("iam.role_policy_attachment", "iam.role", "policies")
type_instead(net.route, net.route_table, "routes")

# How a replacement is ordered: a vpc may be replaced either way (destroy
# first unless lifecycle create_before_destroy says otherwise).
type_replace(net.vpc, "either")

type_attr("db.postgres", "endpoint", "string", ["computed"])
type_attr(k8s.cluster, "api_endpoint", "string", ["computed"])
type_attr(k8s.cluster, "ca_cert", "string", ["computed"])

type_mint("db.postgres", "endpoint", "{name}.db.fake")

# A new database is slow to show up in Read: five attempts before it is gone.
type_retry("db.postgres", 5)
type_mint(k8s.cluster, "api_endpoint", "https://{name}.k8s.fake")
type_mint(k8s.cluster, "ca_cert", "FAKECERT")

# Checkable refinements (E DR-13; `src/refine.rs`): a subnet is a /24 or
# larger, a database keeps backups for one to 35 days.
type_refine(net.subnet, "cidr", prefix_len_le(24))
type_refine("db.postgres", "backup_days", range(1, 35))

# Descriptions (`type_doc(Type, Path, Text)`; the path "" is the type's):
# the language server's hover and completion show them.
type_doc(net.vpc, "", "A virtual network: an isolated address space subnets are cut from.")
type_doc(
  net.vpc,
  "cidr",
  "The network's IPv4 range in CIDR notation. Changing it replaces the network.",
)
type_doc(net.vpc, "tags", "Key-value labels on the network.")
type_doc(net.subnet, "", "A range of a network's addresses in one zone.")
type_doc(
  net.subnet,
  "cidr",
  "The subnet's IPv4 range, inside its network's; a /24 or larger. Changing it replaces the subnet.",
)
type_doc(net.subnet, "vpc", "The network the subnet is in.")
type_doc(net.subnet, "zone", "The zone the subnet's addresses are served in.")
type_doc(
  net.subnet,
  "visibility",
  "\"private\" or \"public\": whether the subnet routes to the internet.",
)
type_doc(net.vpc_peering, "", "A peering connection between two networks.")
type_doc(net.vpc_peering, "requester_vpc", "The network that requests the peering.")
type_doc(net.vpc_peering, "accepter_vpc", "The network that accepts the peering.")
type_doc(net.route_table, "", "A network's routes: where traffic leaving it goes.")
type_doc(net.route_table, "vpc", "The network whose traffic the table routes.")
type_doc(
  net.route_table,
  "routes",
  "The routes: each a destination range and the network it goes to.",
)
type_doc(net.route_table, "routes.destination", "The CIDR range the route sends to its target.")
type_doc(net.route_table, "routes.target", "The network the route reaches.")
type_doc(compute.vm, "", "A virtual machine.")
type_doc(compute.vm, "private_ip", "The machine's address inside its network.")
type_doc("db.postgres", "", "A managed PostgreSQL database.")
type_doc("db.postgres", "backup_days", "How many days of automated backups are kept, from 1 to 35.")
type_doc("db.postgres", "multi_az", "Whether a standby replica runs in a second zone.")
type_doc("db.postgres", "public", "Whether the database has an address outside its network.")
type_doc("db.postgres", "subnets", "The subnets the database may be placed in.")
type_doc(
  "db.postgres",
  "endpoint",
  "The address clients connect to, known once the database exists.",
)
type_doc(k8s.cluster, "", "A managed Kubernetes control plane.")
type_doc(
  k8s.cluster,
  "private_api",
  "Whether the API server is reachable only from inside the network.",
)
type_doc(k8s.cluster, "subnets", "The subnets the cluster's nodes and endpoints use.")
type_doc(k8s.cluster, "version", "The Kubernetes version of the control plane.")
type_doc(k8s.cluster, "api_endpoint", "The API server's URL, known once the cluster exists.")
type_doc(k8s.nodepool, "", "A group of worker nodes of one cluster.")
type_doc(k8s.nodepool, "cluster", "The cluster the nodes join.")
type_doc(k8s.nodepool, "min", "The fewest nodes the pool scales down to.")
type_doc(k8s.nodepool, "max", "The most nodes the pool scales up to.")
type_doc("iam.role", "", "An identity workloads assume.")
type_doc("iam.role", "name", "The role's name, unique in the account.")
type_doc("iam.role", "assume", "Who may assume the role: `{ principals: [...] }`.")
type_doc("iam.role", "policies", "The policies whose permissions the role has.")
type_doc("iam.policy", "", "A set of permissions.")
type_doc("iam.policy", "name", "The policy's name, unique in the account.")
type_doc(
  "iam.policy",
  "statements",
  "The policy's statements: each an effect, actions and resources.",
)

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (comment)
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (comment)
  (comment)
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content))
        (list
          (string
            (string_content))))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content)))))
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (integer))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (call
          (identifier)
          (arguments
            (integer))))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (call
          (identifier)
          (arguments
            (integer)
            (integer))))))
  (comment)
  (comment)
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string)
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content)))))
  (fact
    (call
      (identifier)
      (arguments
        (string
